--- a/github/ipshipyard.yml
+++ b/github/ipshipyard.yml
@@ -1,9 +1,21 @@
 # yaml-language-server: $schema=.schema.json
 
+members:
+  admin:
+    - aschmahmann
+    - cewood
+    - galargh
+    - lidel
+  member:
+    - 2color
+    - hacdias
+    - ns4plabs
 repositories:
   .github:
     advanced_security: false
     allow_update_branch: false
+    archived: false
+    default_branch: main
     has_discussions: false
     merge_commit_message: PR_TITLE
     merge_commit_title: MERGE_MESSAGE
@@ -11,24 +23,18 @@ repositories:
     secret_scanning: false
     squash_merge_commit_message: COMMIT_MESSAGES
     squash_merge_commit_title: COMMIT_OR_PR_TITLE
+    visibility: public
   archived-waterworks-infra:
-    advanced_security: false
-    allow_update_branch: false
-    has_discussions: false
-    secret_scanning_push_protection: false
-    secret_scanning: false
+    archived: true
   github-mgmt:
     advanced_security: false
     allow_update_branch: false
+    archived: false
     branch_protection:
       master:
         blocks_creations: false
         lock_branch: false
-        required_pull_request_reviews:
-          dismiss_stale_reviews: false
-          require_code_owner_reviews: false
-          required_approving_review_count: 1
-          restrict_dismissals: false
+    default_branch: master
     has_discussions: false
     merge_commit_message: PR_TITLE
     merge_commit_title: MERGE_MESSAGE
@@ -36,9 +42,21 @@ repositories:
     secret_scanning: false
     squash_merge_commit_message: COMMIT_MESSAGES
     squash_merge_commit_title: COMMIT_OR_PR_TITLE
+    visibility: public
   waterworks-community:
     advanced_security: false
     allow_update_branch: false
+    archived: false
+    collaborators:
+      admin:
+        - cewood
+        - hacdias
+      push:
+        - 2color
+        - ns4plabs
+    default_branch: main
+    description: Discussion and documentation concerning the operation of the IPFS
+      HTTP Gateway at https://ipfs.io/ipfs.
     has_discussions: false
     merge_commit_message: PR_TITLE
     merge_commit_title: MERGE_MESSAGE
@@ -46,9 +64,20 @@ repositories:
     secret_scanning: false
     squash_merge_commit_message: COMMIT_MESSAGES
     squash_merge_commit_title: COMMIT_OR_PR_TITLE
+    visibility: public
   waterworks-infra:
     advanced_security: false
     allow_update_branch: false
+    archived: false
+    collaborators:
+      admin:
+        - hacdias
+        - ns4plabs
+      triage:
+        - dennis-tra
+    default_branch: master
+    description: IPFS Infra As A Service - The central place for gateway and
+      bootstrapper automations.
     has_discussions: false
     merge_commit_message: PR_TITLE
     merge_commit_title: MERGE_MESSAGE
@@ -56,3 +85,4 @@ repositories:
     secret_scanning: false
     squash_merge_commit_message: COMMIT_MESSAGES
     squash_merge_commit_title: COMMIT_OR_PR_TITLE
+    visibility: private
