Grant engineering push rights to js-libp2p-inspector repo (#33)
* Update ipshipyard.yml

* fix@15778081222 [skip fix]

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/github/ipshipyard.yml
+++ b/github/ipshipyard.yml
@@ -299,6 +299,9 @@ repositories:
     secret_scanning: true
     squash_merge_commit_message: COMMIT_MESSAGES
     squash_merge_commit_title: COMMIT_OR_PR_TITLE
+    teams:
+      push:
+        - engineering
     visibility: public
   js-node-datachannel:
     advanced_security: false
