--- a/github/ipshipyard.yml
+++ b/github/ipshipyard.yml
@@ -171,6 +171,23 @@ repositories:
     squash_merge_commit_message: COMMIT_MESSAGES
     squash_merge_commit_title: COMMIT_OR_PR_TITLE
     visibility: public
+  go-ds-crdt:
+    advanced_security: false
+    allow_update_branch: false
+    archived: false
+    collaborators:
+      admin:
+        - hsanjuan
+    default_branch: dbserver
+    description: Private fork of go-ds-crdt
+    has_discussions: false
+    merge_commit_message: PR_TITLE
+    merge_commit_title: MERGE_MESSAGE
+    secret_scanning_push_protection: false
+    secret_scanning: false
+    squash_merge_commit_message: COMMIT_MESSAGES
+    squash_merge_commit_title: COMMIT_OR_PR_TITLE
+    visibility: private
   helia-adventure:
     advanced_security: false
     allow_update_branch: false
@@ -482,6 +499,23 @@ repositories:
     topics:
       - helia
       - ipfs
+    visibility: public
+  www-helia-io:
+    advanced_security: false
+    allow_update_branch: true
+    archived: false
+    collaborators:
+      push:
+        - web3-bot
+    default_branch: main
+    description: The code behind the helia.io website
+    has_discussions: false
+    merge_commit_message: PR_TITLE
+    merge_commit_title: MERGE_MESSAGE
+    secret_scanning_push_protection: false
+    secret_scanning: false
+    squash_merge_commit_message: COMMIT_MESSAGES
+    squash_merge_commit_title: COMMIT_OR_PR_TITLE
     visibility: public
 teams:
   engineering:
