--- a/github/ipshipyard.yml
+++ b/github/ipshipyard.yml
@@ -178,6 +178,8 @@ repositories:
     collaborators:
       admin:
         - hsanjuan
+      push:
+        - web3-bot
     default_branch: dbserver
     description: Private fork of go-ds-crdt
     has_discussions: false
@@ -505,15 +507,18 @@ repositories:
     allow_update_branch: true
     archived: false
     collaborators:
+      admin:
+        - achingbrain
       push:
+        - engineering
         - web3-bot
     default_branch: main
     description: The code behind the helia.io website
     has_discussions: false
     merge_commit_message: PR_TITLE
     merge_commit_title: MERGE_MESSAGE
-    secret_scanning_push_protection: false
-    secret_scanning: false
+    secret_scanning_push_protection: true
+    secret_scanning: true
     squash_merge_commit_message: COMMIT_MESSAGES
     squash_merge_commit_title: COMMIT_OR_PR_TITLE
     visibility: public
