Add 'guillaumemichel' to push configuration
Access needed to publish reprovide sweep blogpost

--- a/github/ipshipyard.yml
+++ b/github/ipshipyard.yml
@@ -237,6 +237,7 @@ repositories:
         - cwaring
       push:
         - 2color
+        - guillaumemichel
         - web3-bot
     default_branch: main
     description: Interplanetary Shipyard Website
