--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -79,6 +79,7 @@ jobs:
         working-directory: terraform
       - name: Pull terraform state
         run: |
+          echo "{}" > $TF_WORKSPACE.tfstate.json
           terraform apply -refresh-only
           terraform show -json > $TF_WORKSPACE.tfstate.json
         working-directory: terraform
