Allow engineering to push to ipshipyard/kubo private repo

--- a/github/ipshipyard.yml
+++ b/github/ipshipyard.yml
@@ -322,7 +322,7 @@ repositories:
     squash_merge_commit_message: COMMIT_MESSAGES
     squash_merge_commit_title: COMMIT_OR_PR_TITLE
     teams:
-      pull:
+      push:
         - engineering
     topics:
       - actions
