--- a/github/ipshipyard.yml
+++ b/github/ipshipyard.yml
@@ -520,6 +520,9 @@ repositories:
     secret_scanning: false
     squash_merge_commit_message: COMMIT_MESSAGES
     squash_merge_commit_title: COMMIT_OR_PR_TITLE
+    teams:
+      push:
+        - engineering
     visibility: private
     web_commit_signoff_required: false
   p2p-forge:
